Sat Dec 20 17:27:51 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSC/utils/XML_Schema_Resolver.h:
        * XSC/utils/XML_Schema_Resolver.cpp:

          . Update the Basic_Resolver to allow setting of the path after
            it has been constructed and installed in the resolver.

        * XSC/utils/XercesString.h:
        * XSC/utils/XercesString.cpp:

          . Implemented the assignment operator for 'const char *'.

Sat Dec 20 09:27:36 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/xscrt.mpb:
        * XSC.mpc:
        * XSC/Parser.hpp:
        * XSCRT/XSCRT/Parser.hpp:

          Reverted the code back to Xerces-C 2.x

        * XSCRT/XSCRT/utils/Writer_T.cpp:

          Fixed compilation errors.

Fri Dec 19 17:34:35 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/xsc_common.mpb:
        * XSC/utils/XML_Schema_Resolver.h:
        * XSC/utils/XML_Schema_Resolver.cpp:
        * XSC/utils/XML_Schema_Resolver_T.cpp:
        * XSCRT/XSCRT/Parser.hpp:
        * XSCRT/XSCRT/XSCRT.mpc:

          Reverted XSC back to Xerces-C 2.8, however, XSC is able to build
          with Xerces-C 3.0. To build it with XSC, you need to change the
          base projects from xerces -> xerces3.

Fri Dec 19 04:08:02 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSC/Parser.cpp:

          . Removed dead code.

Fri Dec 19 04:06:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSC/Parser.cpp:

          . Removed dead code.

Fri Dec 19 04:02:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/xsc_be.mpb:
        * MPC/config/xsc_static.mpb:
        * contrib/Utility.mpc:
        * XSC/XSC_BE.mpc:

          . Fixed compilation errors on Windows related to linking against
            the wrong runtime libraries for static/dynamic projects.

        * XSC.mpc:
        * XSC/Parser.cpp:
        * XSC/utils/XML_Error_Handler.cpp: