@@ -1,3 +1,10 @@
+Tue Dec 23 18:20:39 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * XSCRT/XSCRT/utils/Buffer_Reader_T.h:
+        * XSCRT/XSCRT/utils/Buffer_Reader_T.cpp:
+
+          . Fix compilation errors in the templates.
+
 Sat Dec 20 17:27:51 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * XSC/utils/XML_Schema_Resolver.h:
